Uploaded image for project: 'Log4cxx'
  1. Log4cxx
  2. LOGCXX-177

SocketImpl::accept uses private APR function: apr_wait_for_io_or_timeout

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.10.0
    • 0.10.0
    • None
    • None
    • Win32 and standard APR 1.2.7

    Description

      When compiling against standard APR 1.2.7 (1.2.8 should be equivalent on this matter), the symbol apr_wait_for_io_or_timeout is unresolved.

      Searching the apr mailing lists it appears that that function is an internal APR function (unix only btw), which only accidentally found its way to an apr_*.h file. See http://marc.info/?l=apr-dev&m=113309765524699&w=2.

      For projects that already use APR for other things it would be desirable to be able to use a standard APR, instead of one patched for the purposes of log4cxx.

      Attachments

        Activity

          People

            carnold@apache.org Curt Arnold
            dsanta Diego Santa Cruz
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: