LOGCXX-177: SocketImpl::accept uses private APR function: apr_wait_for_io_or_timeout